deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: miniature-parakeet
  labels:
    app: miniature-parakeet
spec:
  replicas: 1
  selector:
    matchLabels:
      app: miniature-parakeet
  template:
    metadata:
      labels:
        app: miniature-parakeet
    spec:
      containers:
        - name: web
          image: hsmtkk/miniature-parakeet:latest
          ports:
            - containerPort: 8000
          startupProbe:
            httpGet:
              path: /
              port: 8000
          readinessProbe:
            httpGet:
              path: /
              port: 8000
          livenessProbe:
            httpGet:
              path: /
              port: 8000
