service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: miniature-parakeet-count
spec:
  type: ClusterIP
  selector:
    app: miniature-parakeet-count
  ports:
    - name: web
      port: 8000
    - name: exporter
      port: 9000
---
apiVersion: v1
kind: Service
metadata:
  name: miniature-parakeet-prometheus
spec:
  type: ClusterIP
  selector:
    app: miniature-parakeet-prometheus
  ports:
    - port: 9090
