ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: miniature-parakeet
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: miniature-parakeet
                port:
                  number: 80
